...
        </View>
      </View>
    );
  }

  return (
    <View style={Styles.container} testID="contacts-screen">
      <View style={Styles.header}>
        <Text style={Styles.headerTitle} testID="header-title">
          My Contacts
        </Text>
        <View style={Styles.headerActions}>
          <TouchableOpacity
...
